package world.tan_xz.controller;

import org.springframework.web.bind.annotation.RequestMapping;
import org.springframework.web.bind.annotation.RestController;
import world.tan_xz.entity.Feedback;

@RestController
@RequestMapping(value = "feedback")
public class FeedbackController extends BaseController<Feedback> {


}